--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital@1&family=Roboto:wght@100;400;700;900&display=swap');
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Mulish', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+.logo{
+    border-radius: 50%;
+}
+.navbar{
+    background: transparent !important;
+}
+:root{
+    --color:  #37d3fd;
+}
+.custom-color{
+    color: var(--color) !important;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+.menu_active{
+    font-weight: bold;
+    color: var(--color);
+    border-bottom: 2px solid var(--color);
+}
+.brand-name:hover{
+        font-weight: bold;
+    color: var(--color);
+    border-bottom: 2px solid var(--color);
+    color: var(--color);
+}
+.custom-button{
+    outline: none;
+    border: none;
+    background: transparent;
+    padding: 5px ;
+    border: 2px solid var(--color);
+    border-radius: 5px;
+    transition: 0.3s;
+    text-decoration: none;
+}
+.custom-button:hover{
+    background: var(--color);
+    color: #fff;
+}
+.animate{
+    animation: animatedTop 2s ease-in-out alternate-reverse infinite;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@keyframes animatedTop{
+    0%{
+       transform: translateY(10px);
+    }
+    100%{
+        transform: translateY(-10px);
+        /* margin-top: 0px; */
+        /* transform: scale(1); */
+    }
 }
+
